Added FPS counter

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <title>Enigma</title>
     <body>
         <canvas id="game" height="420" width="600"></canvas>
+        <br />
+        FPS: <span id="fps"></span>
         <script type="text/javascript" src="enigma.js"></script>
     </body>
 </html>
