Initial step towards loading levels from server-side backend

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <canvas id="game" height="420" width="600"></canvas>
         <br />
         FPS: <span id="fps"></span>
+        <script type="text/javascript" src="jquery.min.js"></script>
         <script type="text/javascript" src="enigma.js"></script>
     </body>
 </html>
